feat(FHG): init

--- a/apps/aeon-nucleus/tsconfig.app.json
+++ b/apps/aeon-nucleus/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "outDir": "../../dist/apps/aeon-partner"
+    "outDir": "../../dist/apps/aeon-nucleus"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
